--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,6 @@ yarn.lock linguist-generated
 
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
+
+# gitでチェックアウトしたファイルの改行コードをLFにする
+* text=auto eol=lf
